{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 314,
  "lineage": "cf9bf668-f7e9-e85c-b184-e62a4b0ad93c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:010526273678:instance/i-04d9707a89049a739",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "NewEC2InstanceProfile",
            "id": "i-04d9707a89049a739",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-024c437605eb6f2f3",
            "private_dns": "ip-10-0-1-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e8a120a4b694734e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09deb234a0a8e3325",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f943969f122fc30d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpcrouter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526273678:route-table/rtb-008cf5030668f59ed",
            "id": "rtb-008cf5030668f59ed",
            "owner_id": "010526273678",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0877054d5309a46ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f453d931cfa2e36",
            "route_table_id": "rtb-008cf5030668f59ed",
            "subnet_id": "subnet-09deb234a0a8e3325"
          },
          "dependencies": [
            "aws_route_table.vpcrouter",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c474f01062d0f3a3",
            "route_table_id": "rtb-008cf5030668f59ed",
            "subnet_id": "subnet-0a8f68368216c484a"
          },
          "dependencies": [
            "aws_route_table.vpcrouter",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526273678:security-group/sg-0f943969f122fc30d",
            "description": "Allow web inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0f943969f122fc30d",
            "ingress": [],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "010526273678",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0877054d5309a46ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526273678:subnet/subnet-09deb234a0a8e3325",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09deb234a0a8e3325",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010526273678",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0877054d5309a46ec"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526273678:subnet/subnet-0a8f68368216c484a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8f68368216c484a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010526273678",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0877054d5309a46ec"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526273678:vpc/vpc-0877054d5309a46ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0644e7edbb0e29cdb",
            "default_route_table_id": "rtb-02b7a691b95e7b34d",
            "default_security_group_id": "sg-0fb63a52fbdcd4377",
            "dhcp_options_id": "dopt-01bca388ee3196505",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0877054d5309a46ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b7a691b95e7b34d",
            "owner_id": "010526273678"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gatewayendpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526273678:vpc-endpoint/vpce-086ff0eca972d7050",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-086ff0eca972d7050",
            "owner_id": "010526273678",
            "policy": "{\"Statement\":[{\"Action\":\"s3:*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":[\"arn:aws:s3:::private4cats/*\",\"arn:aws:s3:::publiccats/*\"]},{\"Action\":\"s3:ListBucket\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":[\"arn:aws:s3:::private4cats\",\"arn:aws:s3:::publiccats\"]},{\"Action\":[\"s3:ListAllMyBuckets\",\"s3:GetBucketLocation\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-008cf5030668f59ed"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0877054d5309a46ec"
          },
          "dependencies": [
            "aws_route_table.vpcrouter",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_tls_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526273678:security-group-rule/sgr-07c87ed9dca673c32",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-07c87ed9dca673c32",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f943969f122fc30d",
            "security_group_rule_id": "sgr-07c87ed9dca673c32",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526273678:security-group-rule/sgr-05c4d441682d191e9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-05c4d441682d191e9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f943969f122fc30d",
            "security_group_rule_id": "sgr-05c4d441682d191e9",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}